Resolved Bond trades
Add resolved trade, rename expanded, remove product interface
Change pricers to only accept resolved trade